packages/jsii/test/negatives/neg.internal-underscore-class.8.ts
export interface IMyInterface {
  _methodWithUnderscoreButNoInternal(): void;
}
